# rda-crosswalk

./: 404.html  Makefile  README.md  crosswalk.yaml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
CreativeWork/: index.html
DataCatalog/: index.html
DataDowload/: index.html
DataDownload/: index.html
Dataset/: index.html
MediaObject/: index.html
Schedule/: index.html
Thing/: index.html
alternateName/: index.html
citation/: index.html
contactPoint/: index.html
contentSize/: index.html
contentURL/: index.html
contributor/: index.html
copyrightHolder/: index.html
copyrightYear/: index.html
creator/: index.html
dateCreated/: index.html
dateModified/: index.html
datePublished/: index.html
description/: index.html
distribution/: index.html
distribution.contentUrl/: index.html
distribution.encodingFormat/: index.html
docs/: CreativeWork.md  DataCatalog.md  DataDownload.md  Dataset.md  MediaObject.md  Schedule.md  Thing.md  alternateName.md  contentURL.md  contributor.md  copyrightYear.md  dateCreated.md  dateModified.md  description.md  distribution.md  encodingFormat.md  hasPart.md  identifier.md  inLanguage.md  index.md  isAccessibleForFree.md  isBasedOn.md  keywords.md  measurementTechnique.md  producer.md  publisher.md  sameAs.md  spatialCoverage.md  subjectOf.md  variableMeasured.md  version.md
editor/: index.html
encodingFormat/: index.html
fileFormat_(superseded_by_encordingFormat)/: index.html
funder/: index.html
hasPart/: index.html
identifier/: index.html
inLanguage/: index.html
(+70 files in other folders)
