[tool.poetry]
name = "rda-crosswalk"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
schemasheets = "^0.1.5"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
